second sectionadded and styled

--- a/style.css
+++ b/style.css
@@ -48,16 +48,27 @@ li a{
     padding: 15px 15px 15px 30px;
 }
 
+
+.head-section-left {
+    width: 50%;
+}
+
 .head-section-right {
-    width: 90%;
+    display:flex;
+    width: 50%; 
+    justify-content: center;
+    align-items: center;
+    overflow: hidden
 }
 
 
 .head-section-right img {
+    width: 100%;
+    height: auto;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     object-fit: cover;
-    margin: auto;
-    display: block;
-    width: 60%;
 }
 
 .button {
@@ -70,11 +81,38 @@ li a{
     padding: 15px 20px;
 
 }
+
+.text-centralised {
+    text-align: center;
+}
+.body-section {
+    display:flex;
+    margin: 30px;
+    flex-direction:row;
+}
+
 .body-section h2{
     text-align: center;
 }
 
-.bio-img {
-    text-align: center;
+.about-me {
+    width: 25%;
+    padding:10px;
+}
+
+.about-me img {
+    width: 100%;
+    height: auto;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    flex:1 1 auto;
+    text-align:center;
+    margin:5px;
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 10px;
+    border: #1f2937 solid 1px;
 }
 
