--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     font-family:'Fredoka', sans-serif;
-    max-width: 1080px; 
+    max-width:100%; 
 	margin: 0 auto;
 }
 
@@ -11,6 +11,7 @@ body{
 .header {
     background-color: #1f2937;
     color:white;
+    padding: 0px 20px 0px 20px;
 
 }
 
@@ -20,7 +21,6 @@ body{
     justify-content: space-between;
     flex-direction: row;
     align-items: center;
-    padding: 0 30px 0 30px;
 
 }
 
@@ -48,6 +48,7 @@ li a{
 
 .head-section-left {
     width: 50%;
+    padding:10px;
 }
 
 .head-section-right {
@@ -147,11 +148,10 @@ figcaption {
 
 .left-cta-box {
     width: 70%;
-    line-height:5px;
 }
 
 .right-cta-box {
-    padding:15px;
+    padding:20px;
 }
 
 .button-footer {
