--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body{
     font-family:'Fredoka', sans-serif;
-    max-width:100%; 
+    max-width:1920px; 
 	margin: 0 auto;
 }
 
@@ -85,6 +85,7 @@ li a{
 .body-section {
     display:flex;
     flex-direction:row;
+    justify-content: space-around;
 }
 
 .body-section h2{
@@ -92,19 +93,17 @@ li a{
 }
 
 .about-me {
-    width: 25%;
-    margin:20px;
+    width: 20%;
+    margin:10px;
 }
 
 .about-me img {
     width: 100%;
-    height: auto;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     flex:1 1 auto;
     text-align:center;
-    width: 100%;
     height: 200px;
     object-fit: cover;
     border-radius: 10px;
@@ -165,4 +164,17 @@ figcaption {
     justify-content: center;
 
 
+}
+@media screen and (max-width: 768px) {
+    .footer-cta {
+        padding: 0px;
+    }
+
+    .cta-box {
+        border-radius: 0px;
+    }
+
+    .button-footer {
+        padding: 20px;
+    }
 }
